tests/baselines/reference/es6ModuleLet.errors.txt
es6ModuleLet.ts(5,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
es6ModuleLet.ts(11,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== es6ModuleLet.ts (2 errors) ====
    export let a = "hello";
    export let x: string = a, y = x;
    let b = y;
    let c: string = b, d = c;
    export module m1 {
                  ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export let k = a;
        export let l: string = b, m = k;
        let n = m1.k;
        let o: string = n, p = k;
    }
    module m2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export let k = a;
        export let l: string = b, m = k;
        let n = m1.k;
        let o: string = n, p = k;
    }